testdata/baselines/reference/submodule/compiler/unusedTypeParameterInFunction3.errors.txt
unusedTypeParameterInFunction3.ts(1,16): error TS6196: 'Y' is declared but never used.


==== unusedTypeParameterInFunction3.ts (1 errors) ====
    function f1<X, Y, Z>() {
                   ~
!!! error TS6196: 'Y' is declared but never used.
        var a: X;
        var b: Z;
        a;
        b;
    }